test: add and update backend test coverage